--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,3 +1,39 @@
-<p>
-  dashboard works!
-</p>
+<section class="content-header">
+  <h1>Dashboard</h1>
+</section>
+
+<section class="content">
+  <div class="col-xs-4">
+     <div class="small-box bg-green">
+        <div class="inner">
+            <h3>RS 10</h3>
+            <p>Total créditos</p>
+        </div>
+        <div class="icon">
+            <i class="fa fa-bank"></i>
+        </div>
+     </div>
+  </div>
+  <div class="col-xs-4">
+      <div class="small-box bg-red">
+         <div class="inner">
+             <h3>RS 10</h3>
+             <p>Total débitos</p>
+         </div>
+         <div class="icon">
+             <i class="fa fa-credit-card"></i>
+         </div>
+      </div>
+   </div>
+   <div class="col-xs-4">
+      <div class="small-box bg-blue">
+         <div class="inner">
+             <h3>RS 10</h3>
+             <p>Saldo</p>
+         </div>
+         <div class="icon">
+             <i class="fa fa-money"></i>
+         </div>
+      </div>
+   </div>
+</section>
