Page Ciclo de Pagamento - Rotas

--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -6,13 +6,13 @@
           <i class="fa fa-dashboard"></i> <span>Dashboard</span>
         </a>
         <a href="#">
-          <i class="fa fa-edit"></i> <span>XXX</span>
+          <i class="fa fa-edit"></i> <span>Ciclo de Pagamento</span>
           <span class="pull-right-container">
             <i class="fa fa-angle-left pull-right"></i>
           </span>
         </a>
         <ul class="treeview-menu">
-          <li><a ><i class="fa fa-circle-o"></i>List</a></li>
+          <li><a [routerLink]="['/ciclo-pagamento']"><i class="fa fa-circle-o"></i>Visualizar</a></li>
           <li><a ><i class="fa fa-circle-o"></i>Novo</a></li>
         </ul>
       </li>
