Page - Ciclo Pagamento - Lista

--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -12,6 +12,7 @@
           </span>
         </a>
         <ul class="treeview-menu">
+            <li><a [routerLink]="['/ciclo-pagamento-lista']"><i class="fa fa-circle-o"></i>Lista</a></li>
           <li><a [routerLink]="['/ciclo-pagamento']"><i class="fa fa-circle-o"></i>Visualizar</a></li>
           <li><a ><i class="fa fa-circle-o"></i>Novo</a></li>
         </ul>
