--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -2,7 +2,7 @@
   <section class="sidebar">
      <ul class="sidebar-menu" data-widget="tree">
       <li class="treeview">
-        <a href="#">
+        <a [routerLink]="['']">
           <i class="fa fa-dashboard"></i> <span>Dashboard</span>
         </a>
         <a href="#">
@@ -13,8 +13,7 @@
         </a>
         <ul class="treeview-menu">
             <li><a [routerLink]="['/ciclo-pagamento-lista']"><i class="fa fa-circle-o"></i>Lista</a></li>
-          <li><a [routerLink]="['/ciclo-pagamento']"><i class="fa fa-circle-o"></i>Visualizar</a></li>
-          <li><a ><i class="fa fa-circle-o"></i>Novo</a></li>
+          <li><a [routerLink]="['/ciclo-pagamento']"><i class="fa fa-circle-o"></i>Novo</a></li>
         </ul>
       </li>
     </ul>
