Delete - Ciclo de pagamento

--- a/src/app/components/ciclo-pagamento-lista/ciclo-pagamento-lista.component.html
+++ b/src/app/components/ciclo-pagamento-lista/ciclo-pagamento-lista.component.html
@@ -17,7 +17,7 @@
                 <button class="btn btn-warning" (click)="visualizar(c._id)">
                     <i class="fa fa-pencil"></i>
                 </button>
-                <button class="btn btn-danger">
+                <button class="btn btn-danger" (click)="delete(c._id)">
                     <i class="fa fa-trash-o"></i>
                 </button>
             </td>
