--- a/src/app/components/ciclo-pagamento/ciclo-pagamento.component.html
+++ b/src/app/components/ciclo-pagamento/ciclo-pagamento.component.html
@@ -5,42 +5,47 @@
       </div>
 
       <div class="box-body">
-          <div class="row">
-              <div class="col-xs-4">
-                  <div class="small-box bg-green">
-                     <div class="inner">
-                         <h3>{{ sumario.credito }}</h3>
-                         <p>Total créditos</p>
-                     </div>
-                     <div class="icon">
-                         <i class="fa fa-bank"></i>
+            <div class="row">
+                <div class="col-xs-4">
+                    <div class="small-box bg-green">
+                       <div class="inner">
+                           <h3 id="credito">{{ sumario.credito }}</h3>
+                           <p>Total créditos</p>
+                       </div>
+                       <div class="icon">
+                           <i class="fa fa-bank"></i>
+                       </div>
+                    </div>
+                 </div>
+                 <div class="col-xs-4">
+                     <div class="small-box bg-red">
+                        <div class="inner">
+                            <h3 id="debito">{{ sumario.debito }}</h3>
+                            <p>Total débitos</p>
+                        </div>
+                        <div class="icon">
+                            <i class="fa fa-credit-card"></i>
+                        </div>
                      </div>
                   </div>
-               </div>
-               <div class="col-xs-4">
-                   <div class="small-box bg-red">
-                      <div class="inner">
-                          <h3>{{ sumario.debito }}</h3>
-                          <p>Total débitos</p>
-                      </div>
-                      <div class="icon">
-                          <i class="fa fa-credit-card"></i>
-                      </div>
-                   </div>
-                </div>
-                <div class="col-xs-4">
-                   <div class="small-box bg-blue">
-                      <div class="inner">
-                          <h3>{{ total }}</h3>
-                          <p>Saldo</p>
-                      </div>
-                      <div class="icon">
-                          <i class="fa fa-money"></i>
-                      </div>
-                   </div>
-                </div>
-          </div>
-      </div>       
+                  <div class="col-xs-4">
+                     <div class="small-box bg-blue">
+                        <div class="inner">
+                            <h3 id="total">{{ total }}</h3>
+                            <p>Saldo</p>
+                        </div>
+                        <div class="icon">
+                            <i class="fa fa-money"></i>
+                        </div>
+                     </div>
+                  </div>
+            </div>
+        </div>
+        
+        
+    </div>
+</div>
+           
 
       <form class="form-horizontal" #form="ngForm"  novalidate>
         <div [ngClass]="classCss" role="alert" *ngIf="message">
@@ -92,7 +97,7 @@
                       type="text" 
                       [(ngModel)]="ciclo.ano"
                       class="form-control" 
-                      name="mes"
+                      name="ano"
                       id="inputAno" 
                       #ano="ngModel"
                       placeholder="Ano"
@@ -102,110 +107,118 @@
           </div>
         </div>
 
-        <div class="box-body">
-            <div class="row">
-              <div class="col-xs-6">
-                  <label for="inputCreditos" class="col-sm-2 control-label">Créditos</label>
-              </div>
-              <div class="col-xs-6">
-                  <label for="inputDébitos" class="col-sm-2 control-label">Débitos</label>
+        <div class="box box-success">
+                <div class="box-header">
+                  <h3 class="box-title">Créditos</h3>
                 </div>
-            </div>
-        </div>  
-        
-        <div class="box-body">
-            <div class="row">
-                <div class="col-xs-6">
-                  <table class="table table-bordered">
-                    <tr>
-                      <th>Nome</th>
-                      <th>Valor</th>
-                    </tr>
-                    <tr *ngFor="let cred of ciclo.creditos">
-                      <td>
-                          <input style="width: 120px;"
-                          type="text"
-                          [(ngModel)]="cred.nome"
-                          class="form-control"
-                          [ngModelOptions]="{standalone: true}" 
-                          ngModel>
-                      </td>
-                      <td>
-                          <input style="width: 120px;" (change)="calculadora()"
-                          type="number"
-                          [(ngModel)]="cred.valor"
-                          class="form-control"
-                          [ngModelOptions]="{standalone: true}"
-                          ngModel>
-                      </td>
-                      <td class="table-actions">
-                         <button class="btn btn-success" (click)="addCreditos(cred)">
-                           <i class="fa fa-plus"></i>
-                         </button>
-                         <button class="btn btn-warning" (click)="cloneCreditos(cred)">
-                            <i class="fa fa-clone"></i>
-                          </button>
-                          <button class="btn btn-danger" (click)="removeCreditos(cred)">
-                              <i class="fa fa-trash-o"></i>
-                            </button>
-                      </td>
-                    </tr>
-                  </table>
-                </div>
-                <div class="col-xs-6">
-                    <table class="table table-bordered">
-                      <tr>
-                        <th>Nome</th>
-                        <th>Valor</th>
-                        <th>Status</th>
-                      </tr>
-                      <tr *ngFor="let deb of ciclo.debitos">
-                        <td>
-                            <input style="width: 120px;"
-                            type="text" 
-                            [(ngModel)]="deb.nome"
-                            class="form-control" 
-                            [ngModelOptions]="{standalone: true}"
-                            ngModel>
-                        </td>
-                        <td>
-                            <input style="width: 120px;" (change)="calculadora()"
-                            type="number" 
-                            [(ngModel)]="deb.valor"
-                            class="form-control" 
-                            [ngModelOptions]="{standalone: true}"
-                            ngModel>
-                        </td>
-                        <td>
-                            <input style="width: 140px;"
-                            type="text" 
-                            [(ngModel)]="deb.status"
-                            class="form-control" 
-                            [ngModelOptions]="{standalone: true}"
-                            ngModel>
-                        </td>
-                        <td class="table-actions">
-                            <button class="btn btn-success" (click)="addDebitos(deb)">
-                              <i class="fa fa-plus"></i>
-                            </button>
-                            <button class="btn btn-warning" (click)="cloneDebitos(deb)">
-                               <i class="fa fa-clone"></i>
-                             </button>
-                             <button class="btn btn-danger" (click)="removeDebitos(deb)">
-                                 <i class="fa fa-trash-o"></i>
-                               </button>
-                         </td>
-                      </tr>
-                    </table>
-                  </div>
-            </div>
-          </div>
 
+                <div class="box-body">
+                        <div class="row">
+                            <div class="col-xs-12">
+                                <table class="table table-bordered">
+                                    <tr>
+                                        <th>Nome</th>
+                                        <th>Valor</th>
+                                        <th><button type="submit"  (click)="createOrUpdate()" [disabled]="!form.valid" class="btn btn-info btn-md">Salvar</button></th>
+                                    </tr>
+                                    <tr *ngFor="let cred of ciclo.creditos">
+                                        <td>
+                                            <input type="text"
+                                                  [(ngModel)]="cred.nome"
+                                                  class="form-control"
+                                                  [ngModelOptions]="{standalone: true}" 
+                                                  ngModel>
+                                            </td>
+                                        <td>
+                                            <input (change)="calculadora()"
+                                                  type="number"
+                                                  [(ngModel)]="cred.valor"
+                                                  class="form-control"
+                                                  [ngModelOptions]="{standalone: true}"
+                                                  ngModel>
+                                        </td>
+                                        <td class="table-actions">
+                                            <button class="btn btn-success" (click)="addCreditos(cred)">
+                                                   <i class="fa fa-plus"></i>
+                                            </button>
+                                            <button class="btn btn-warning" (click)="cloneCreditos(cred)">
+                                                    <i class="fa fa-clone"></i>
+                                            </button>
+                                            <button class="btn btn-danger" (click)="removeCreditos(cred)">
+                                                      <i class="fa fa-trash-o"></i>
+                                            </button>
+                                         </td>
+                                     </tr>
+                                </table>
+                            </div>    
+                        </div>
+                 </div> 
+        </div>       
+        
+        <div class="box box-danger">
+                <div class="box-header">
+                  <h3 class="box-title">Débitos</h3>
+                </div>
+                <div class="box-body">
+                        <div class="row">
+                            <div class="col-xs-12">
+                                <table class="table table-bordered">
+                                  <tr>
+                                    <th>Nome</th>
+                                    <th>Valor</th>
+                                    <th>Status</th>
+                                    <th><button type="submit"  (click)="createOrUpdate()" [disabled]="!form.valid" class="btn btn-info btn-md">Salvar</button></th>
+                                  </tr>
+                                  <tr *ngFor="let deb of ciclo.debitos">
+                                    <td>
+                                        <input type="text" 
+                                        [(ngModel)]="deb.nome"
+                                        class="form-control" 
+                                        [ngModelOptions]="{standalone: true}"
+                                        ngModel>
+                                    </td>
+                                    <td>
+                                        <input (change)="calculadora()"
+                                        type="number" 
+                                        [(ngModel)]="deb.valor"
+                                        class="form-control" 
+                                        [ngModelOptions]="{standalone: true}"
+                                        ngModel>
+                                    </td>
+                                    <td> 
+                                        <select  [(ngModel)]="deb.status"
+                                            class="form-control select2" 
+                                            id="inputStatus" 
+                                            [ngModelOptions]="{standalone: true}"
+                                            style="width: 100%"
+                                            required
+                                            ngModel>
+                                            <option>PAGO</option>
+                                            <option>PENDENTE</option>
+                                        </select>
+                                    </td>
+                                    <td class="table-actions">
+                                        <button class="btn btn-success" (click)="addDebitos(deb)">
+                                          <i class="fa fa-plus"></i>
+                                        </button>
+                                        <button class="btn btn-warning" (click)="cloneDebitos(deb)">
+                                           <i class="fa fa-clone"></i>
+                                         </button>
+                                         <button class="btn btn-danger" (click)="removeDebitos(deb)">
+                                             <i class="fa fa-trash-o"></i>
+                                           </button>
+                                     </td>
+                                  </tr>
+                                </table>
+                              </div>
+                        </div>
+                    </div>
+        </div>              
+        
         <div class="box-footer">
-          <button type="submit"  (click)="createOrUpdate()" [disabled]="!form.valid" class="btn btn-info pull-right">Incluir</button>
+          <button type="submit"  (click)="createOrUpdate()" [disabled]="!form.valid" class="btn btn-info pull-right">Salvar</button>
         </div>
       </form>
-    </div>
-</div>
+    
 
 
