--- a/src/app/components/ciclo-pagamento-lista/ciclo-pagamento-lista.component.html
+++ b/src/app/components/ciclo-pagamento-lista/ciclo-pagamento-lista.component.html
@@ -13,6 +13,9 @@
             <td>{{c.nome}}</td>
             <td>{{c.mes}}</td>
             <td>{{c.ano}}</td>
+            <td id="credito">{{ sumario.credito }}</td>
+            <td id="credito">{{ sumario.debito }}</td>
+            <td id="credito">{{ total }}</td>
             <td style="width: 140px">
                 <button class="btn btn-warning" (click)="visualizar(c._id)">
                     <i class="fa fa-pencil"></i>
