Ciclo / Conta - Refatorando

--- a/src/app/components/ciclo-pagamento-lista/ciclo-pagamento-lista.component.html
+++ b/src/app/components/ciclo-pagamento-lista/ciclo-pagamento-lista.component.html
@@ -17,10 +17,10 @@
             <td id="credito">{{ sumario.debito }}</td>
             <td id="credito">{{ total }}</td>
             <td style="width: 140px">
-                <button class="btn btn-warning" (click)="visualizar(c._id)">
+                <button class="btn btn-warning" (click)="visualizar(c.id)">
                     <i class="fa fa-pencil"></i>
                 </button>
-                <button class="btn btn-danger" (click)="delete(c._id)">
+                <button class="btn btn-danger" (click)="delete(c.id)">
                     <i class="fa fa-trash-o"></i>
                 </button>
             </td>
