Cliente Component / Service

--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -15,6 +15,15 @@
             <li><a [routerLink]="['/ciclo-pagamento-lista']"><i class="fa fa-circle-o"></i>Lista</a></li>
           <li><a [routerLink]="['/ciclo-pagamento']"><i class="fa fa-circle-o"></i>Novo</a></li>
         </ul>
+        <a href="#">
+          <i class="fa fa-edit"></i> <span>Cliente</span>
+          <span class="pull-right-container">
+            <i class="fa fa-angle-left pull-right"></i>
+          </span>
+        </a>
+        <ul class="treeview-menu">
+            <li><a [routerLink]="['/cliente']"><i class="fa fa-circle-o"></i>Lista</a></li>
+        </ul>
       </li>
     </ul>
   </section>
