--- a/src/app/components/cliente/cliente.component.html
+++ b/src/app/components/cliente/cliente.component.html
@@ -7,10 +7,10 @@
        </tr>
      </thead>
      <tbody>
-        <tr *ngFor="let c of clientes">
+        <tr *ngFor="let c of clientesDTO">
             <td>{{c.nome}}</td>
              <td style="width: 140px">
-                <button class="btn btn-warning" (click)="findById(c.id)">
+                <button class="btn btn-warning" (click)="getContas(c.id)">
                     <i class="fa fa-pencil"></i>
                 </button>
                 <!-- <button class="btn btn-danger" (click)="findById(c.id)">
