--- a/src/app/components/cliente-contas/cliente-contas.component.html
+++ b/src/app/components/cliente-contas/cliente-contas.component.html
@@ -2,16 +2,18 @@
   <table class="table" style="background-color: white">
      <thead>
        <tr>
-         <th>Nome</th>
-         <th>Editar</th>
+         <th>Cliente</th>
+         <th>Conta</th>
+         <th>Listar Ciclos</th>
        </tr>
      </thead>
      <tbody>
         <tr *ngFor="let c of contas">
+            <td>{{c.clienteDTO.nome}}</td>
             <td>{{c.nome}}</td>
              <td style="width: 140px">
                 <button class="btn btn-warning" (click)="getCliclosByContaId(c.id)">
-                    <i class="fa fa-pencil"></i>
+                    <i class="fa fa-bank"></i>
                 </button>
                 <!-- <button class="btn btn-danger" (click)="findById(c.id)">
                     <i class="fa fa-trash-o"></i>
