--- a/src/app/components/cliente/cliente.component.html
+++ b/src/app/components/cliente/cliente.component.html
@@ -3,7 +3,7 @@
      <thead>
        <tr>
          <th>Nome</th>
-         <th>Editar</th>
+         <th>Listar Contas</th>
        </tr>
      </thead>
      <tbody>
@@ -11,7 +11,7 @@
             <td>{{c.nome}}</td>
              <td style="width: 140px">
                 <button class="btn btn-warning" (click)="getContas(c.id)">
-                    <i class="fa fa-pencil"></i>
+                    <i class="fa fa-bank"></i>
                 </button>
                 <!-- <button class="btn btn-danger" (click)="findById(c.id)">
                     <i class="fa fa-trash-o"></i>
