--- a/src/app/components/ciclo-pagamento/ciclo-pagamento.component.html
+++ b/src/app/components/ciclo-pagamento/ciclo-pagamento.component.html
@@ -31,7 +31,7 @@
                   <div class="col-xs-4">
                      <div class="small-box bg-blue">
                         <div class="inner">
-                            <h3 id="total">{{ total }}</h3>
+                            <h3 id="saldo">{{ sumario.saldo }}</h3>
                             <p>Saldo</p>
                         </div>
                         <div class="icon">
