--- a/src/app/components/ciclo-pagamento-lista/ciclo-pagamento-lista.component.html
+++ b/src/app/components/ciclo-pagamento-lista/ciclo-pagamento-lista.component.html
@@ -46,6 +46,15 @@
         </div>
 </div>
 
+<div class="col-md-12" style="margin-left: 0%">
+        <div class="box box-primary">
+          <div class="box-header with-border">
+                <button class="btn btn-primary" (click)="criarNovoCiclo()">
+                        <i class="fa fa-pencil">  Novo Ciclo</i>
+                </button>
+          </div>
+</div>
+          
 <div class="box-body">
   <table class="table" style="background-color: white">
      <thead>
