--- a/src/app/components/ciclo-pagamento-lista/ciclo-pagamento-lista.component.html
+++ b/src/app/components/ciclo-pagamento-lista/ciclo-pagamento-lista.component.html
@@ -66,6 +66,7 @@
          <th>Total Débitos</th>
          <th>Saldo</th>
          <th>Editar</th>
+         <th>Clone</th>
          <th>Excluir</th>
        </tr>
      </thead>
@@ -83,6 +84,11 @@
                 </button>
             </td>
             <td>
+                <button type="button" class="btn btn-info btn-small" data-toggle="modal" data-target="#myModal" (click)="clone(c.id)">
+                    <i class="fa fa-clone"></i>
+                </button>
+            </td>
+            <td>
                 <button class="btn btn-danger" (click)="delete(c.id)">
                     <i class="fa fa-trash-o"></i>
                 </button>
@@ -90,4 +96,78 @@
         </tr>
      </tbody>
   </table>
+</div>
+
+<div class="modal fade" id="myModal" role="dialog">
+        <div class="modal-dialog">
+        
+          <!-- Modal content-->
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal">&times;</button>
+              <h4 class="modal-title">Clone Ciclo de Pagamento</h4>
+            </div>
+            <div class="modal-body">
+                    <form class="form-horizontal" #form="ngForm"  novalidate> 
+                            <div class="box-body">
+                                    <div class="row">
+                                      <div class="col-xs-4">
+                                            <input 
+                                                  type="text" 
+                                                  [(ngModel)]="ciclo.nome"
+                                                  class="form-control" 
+                                                  name="nome"
+                                                  id="inputNome" 
+                                                  #nome="ngModel"
+                                                  placeholder="Nome"
+                                                  required>
+                                            <span class="help-block" *ngIf="nome.invalid && nome.dirty">Nome Obrigatória</span>
+                                      </div>
+                                      <div class="col-xs-4">
+                                        <select  [(ngModel)]="ciclo.mes"
+                                            class="form-control select2" 
+                                            id="inputMes" 
+                                            [ngModelOptions]="{standalone: true}"
+                                            style="width: 100%"
+                                            required
+                                            ngModel>
+                                            <option>1</option>
+                                            <option>2</option>
+                                            <option>3</option>
+                                            <option>4</option>
+                                            <option>5</option>
+                                            <option>6</option>
+                                            <option>7</option>
+                                            <option>8</option>
+                                            <option>9</option>
+                                            <option>10</option>
+                                            <option>11</option>
+                                            <option>12</option>
+                                        </select>
+                                      </div>
+                                      <div class="col-xs-4">
+                                        <select  [(ngModel)]="ciclo.ano"
+                                            class="form-control select2" 
+                                            id="inputAno" 
+                                            [ngModelOptions]="{standalone: true}"
+                                            style="width: 100%"
+                                            required
+                                            ngModel>
+                                            <option>2018</option>
+                                            <option>2019</option>
+                                            <option>2020</option>
+                                            <option>2021</option>
+                                        </select>
+                                       </div>
+                                    </div>
+                                  </div>
+                        <div class="modal-footer">
+                            <button type="submit"  (click)="cloneCreate()" [disabled]="!form.valid" class="btn btn-info pull-right">Salvar</button>
+                        </div>
+                </form>
+            </div>
+         
+          </div>
+          
+        </div>
 </div>
