--- a/src/app/components/ciclo-pagamento/ciclo-pagamento.component.html
+++ b/src/app/components/ciclo-pagamento/ciclo-pagamento.component.html
@@ -81,28 +81,40 @@
                   <span class="help-block" *ngIf="nome.invalid && nome.dirty">Nome Obrigatória</span>
             </div>
             <div class="col-xs-4">
-                <input 
-                      type="text" 
-                      [(ngModel)]="ciclo.mes"
-                      class="form-control" 
-                      name="mes"
-                      id="inputMes" 
-                      #mes="ngModel"
-                      placeholder="Mês"
-                      required>
-                <span class="help-block" *ngIf="mes.invalid && mes.dirty">Nome Obrigatório</span>
+                    <select  [(ngModel)]="ciclo.mes"
+                    class="form-control select2" 
+                    id="inputMes" 
+                    [ngModelOptions]="{standalone: true}"
+                    style="width: 100%"
+                    required
+                    ngModel>
+                    <option>1</option>
+                    <option>2</option>
+                    <option>3</option>
+                    <option>4</option>
+                    <option>5</option>
+                    <option>6</option>
+                    <option>7</option>
+                    <option>8</option>
+                    <option>9</option>
+                    <option>10</option>
+                    <option>11</option>
+                    <option>12</option>
+                </select>
             </div>
             <div class="col-xs-4">
-                <input 
-                      type="text" 
-                      [(ngModel)]="ciclo.ano"
-                      class="form-control" 
-                      name="ano"
-                      id="inputAno" 
-                      #ano="ngModel"
-                      placeholder="Ano"
-                      required>
-                <span class="help-block" *ngIf="ano.invalid && ano.dirty">Ano Obrigatório</span>
+                <select  [(ngModel)]="ciclo.ano"
+                    class="form-control select2" 
+                    id="inputAno" 
+                    [ngModelOptions]="{standalone: true}"
+                    style="width: 100%"
+                    required
+                    ngModel>
+                    <option>2018</option>
+                    <option>2019</option>
+                    <option>2020</option>
+                    <option>2021</option>
+                </select>
             </div>
           </div>
         </div>
