Debito descricao - service

--- a/src/app/components/ciclo-pagamento/ciclo-pagamento.component.html
+++ b/src/app/components/ciclo-pagamento/ciclo-pagamento.component.html
@@ -190,7 +190,7 @@
                                             style="width: 100%"
                                             required
                                             ngModel>
-                                        <option *ngFor="let o of descricoes" [ngValue]="o.id">{{o.nome}}</option>
+                                        <option *ngFor="let o of debitodescricoes" [ngValue]="o.id">{{o.nome}}</option>
                                         </select>
                                     </td>
                                     <td>
