--- a/src/app/components/ciclo-pagamento/ciclo-pagamento.component.html
+++ b/src/app/components/ciclo-pagamento/ciclo-pagamento.component.html
@@ -179,7 +179,13 @@
                                     <th>Descrição</th>
                                     <th>Valor</th>
                                     <th>Status</th>
-                                    <th><button type="submit"  (click)="createOrUpdate()" [disabled]="!form.valid" class="btn btn-info btn-md">Salvar</button></th>
+                                    <th>
+                                        <button type="submit"  (click)="createOrUpdate()" [disabled]="!form.valid" class="btn btn-info btn-md">Salvar</button>
+                                        -
+                                        <button type="button" class="btn btn-success btn-small" data-toggle="modal" data-target="#myModal">
+                                                Novo
+                                        </button>
+                                    </th>
                                   </tr>
                                   <tr *ngFor="let deb of ciclo.debitos">
                                    <td>
@@ -235,6 +241,41 @@
           <button type="submit"  (click)="createOrUpdate()" [disabled]="!form.valid" class="btn btn-info pull-right">Salvar</button>
         </div>
       </form>
-    
 
+      <div class="modal fade" id="myModal" role="dialog">
+            <div class="modal-dialog">
+                
+                  <!-- Modal content-->
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <button type="button" class="close" data-dismiss="modal">&times;</button>
+                      <h4 class="modal-title">Débito descrição - Novo</h4>
+                    </div>
+                    <div class="modal-body">
+                            <form class="form-horizontal" #form="ngForm"  novalidate> 
+                                    <div class="box-body">
+                                            <div class="row">
+                                              <div class="col-xs-4">
+                                                    <input style="width: 100%"
+                                                          type="text" 
+                                                          [(ngModel)]="debitoDescricao.nome"
+                                                          class="form-control" 
+                                                          name="nome"
+                                                          id="inputNome" 
+                                                          #nome="ngModel"
+                                                          placeholder="Nome"
+                                                          >
+                                            </div>
+                                          </div>
+                                    </div>
+                                <div class="modal-footer">
+                                    <button type="submit"  (click)="salvarDebitoDescricao()" [disabled]="!form.valid" class="btn btn-info pull-right">Salvar</button>
+                                </div>
+                        </form>
+                    </div>
+                  </div>
+            </div>
+        </div>
+      
+      
 
