--- a/src/app/components/ciclo-pagamento/ciclo-pagamento.component.html
+++ b/src/app/components/ciclo-pagamento/ciclo-pagamento.component.html
@@ -6,7 +6,7 @@
 
       <div class="box-body">
             <div class="row">
-                <div class="col-xs-4">
+                <div class="col-xs-3">
                     <div class="small-box bg-green">
                        <div class="inner">
                            <h3 id="credito">{{ sumario.credito }}</h3>
@@ -17,18 +17,29 @@
                        </div>
                     </div>
                  </div>
-                 <div class="col-xs-4">
+                 <div class="col-xs-3">
                      <div class="small-box bg-red">
                         <div class="inner">
-                            <h3 id="debito">{{ sumario.debito }}</h3>
-                            <p>Total débitos</p>
+                            <h3 id="debito">{{ sumario.pago }}</h3>
+                            <p>Pago</p>
                         </div>
                         <div class="icon">
                             <i class="fa fa-credit-card"></i>
                         </div>
                      </div>
                   </div>
-                  <div class="col-xs-4">
+                  <div class="col-xs-3">
+                        <div class="small-box bg-yellow">
+                           <div class="inner">
+                               <h3 id="debito">{{ sumario.pendente }}</h3>
+                               <p>Pendente</p>
+                           </div>
+                           <div class="icon">
+                               <i class="fa fa-credit-card"></i>
+                           </div>
+                        </div>
+                     </div>
+                  <div class="col-xs-3">
                      <div class="small-box bg-blue">
                         <div class="inner">
                             <h3 id="saldo">{{ sumario.saldo }}</h3>
@@ -176,15 +187,15 @@
                             <div class="col-xs-12">
                                 <table class="table table-bordered">
                                   <tr>
-                                    <th>Descrição</th>
+                                    <th>Descrição -
+                                         <button type="button" class="btn btn-success btn-small" data-toggle="modal" data-target="#myModal">
+                                        Novo
+                                         </button>
+                                    </th>
                                     <th>Valor</th>
                                     <th>Status</th>
                                     <th>
                                         <button type="submit"  (click)="createOrUpdate()" [disabled]="!form.valid" class="btn btn-info btn-md">Salvar</button>
-                                        -
-                                        <button type="button" class="btn btn-success btn-small" data-toggle="modal" data-target="#myModal">
-                                                Novo
-                                        </button>
                                     </th>
                                   </tr>
                                   <tr *ngFor="let deb of ciclo.debitos">
@@ -209,6 +220,7 @@
                                     </td>
                                     <td> 
                                         <select  [(ngModel)]="deb.status"
+                                            (change)="calculadora()"
                                             class="form-control select2" 
                                             id="inputStatus" 
                                             [ngModelOptions]="{standalone: true}"
