--- a/src/app/components/ciclo-pagamento/ciclo-pagamento.component.html
+++ b/src/app/components/ciclo-pagamento/ciclo-pagamento.component.html
@@ -222,6 +222,7 @@
                             <div class="col-xs-12">
                                 <table class="table table-bordered">
                                   <tr>
+                                    <th>Data</th>
                                     <th>Descrição -
                                          <button type="button" class="btn btn-success btn-small" data-toggle="modal" data-target="#myModal">
                                         Novo
@@ -234,6 +235,13 @@
                                     </th>
                                   </tr>
                                   <tr *ngFor="let deb of ciclo.debitos">
+                                    <td>
+                                        <input  type="date" 
+                                           [(ngModel)]="deb.data"
+                                           class="form-control" 
+                                           [ngModelOptions]="{standalone: true}"
+                                           ngModel>
+                                    </td>
                                    <td>
                                         <select  [(ngModel)]="deb.descricao.id"
                                             class="form-control select2" 
