--- a/src/app/components/ciclo-pagamento/ciclo-pagamento.component.html
+++ b/src/app/components/ciclo-pagamento/ciclo-pagamento.component.html
@@ -93,7 +93,8 @@
             <div class="col-xs-4">
                     <select  [(ngModel)]="ciclo.mes"
                     class="form-control select2" 
-                    id="inputMes" 
+                    id="selectMes" 
+                    (change)="selectMesAno()"
                     [ngModelOptions]="{standalone: true}"
                     style="width: 100%"
                     required
@@ -115,7 +116,8 @@
             <div class="col-xs-4">
                 <select  [(ngModel)]="ciclo.ano"
                     class="form-control select2" 
-                    id="inputAno" 
+                    id="selectAno" 
+                    (change)="selectMesAno()"
                     [ngModelOptions]="{standalone: true}"
                     style="width: 100%"
                     required
