Ciclo novo - ajuste

--- a/src/app/components/ciclo-pagamento-lista/ciclo-pagamento-lista.component.html
+++ b/src/app/components/ciclo-pagamento-lista/ciclo-pagamento-lista.component.html
@@ -181,7 +181,7 @@
           <!-- Modal content-->
           <div class="modal-content">
             <div class="modal-header">
-              <button type="button" class="close" data-dismiss="modal">&times;</button>
+              <button type="button" id="fechar" class="close" data-dismiss="modal">&times;</button>
               <h4 class="modal-title">Novo Ciclo de Pagamento</h4>
             </div>
             <div class="modal-body">
